# chatnet-cli

./: .clang-format  .release-it.json  CMakeLists.txt  README.md  autofree.c  autofree.h  chatnet-client.cpp  chatnet-server.php  chatnet.c  chatnet.cpp  client.c  client.ts  db.c  db.h  gcmalloc.h  ipc.c  ipc.h  lib-chatnet-client.cpp  lib-chatnet-client.hpp  libchatnet.h  make.bash  make.bat  make.sh  markdown.c  markdown.h  microphone.c  microphone.h  net.php  package.json  readme.md  server.ts  sio-client.c  sio-client.h  str.c  str.h  string.c  string.h  tsconfig.json  util.c  util.h  (+1 more)
include/: .lib-cpython-builtins.cpp.swp  dirent.h  lib-cpython-builtins.cpp  lib-cpython-builtins.hpp  libcpyb.h
src/: index.ts  types.d.ts
src/handlers/: chat.ts  index.ts
src/services/: api.ts  common.ts  config.ts  index.ts  linenoise.ts  logger.ts  mic.ts  puppeteer.ts  receive.ts  stdoutee.ts  validation.ts
